# patterns-of-enterprise-application

./: .gitignore
domain_model/rust/domain_model_app/: .env  Cargo.toml
domain_model/rust/domain_model_app/migrations/2019-11-27-195642_create_revenue_recognition/: up.sql
domain_model/rust/domain_model_app/src/: schema.rs
domain_model/rust/domain_model_app/src/models/: contract.rs
transaction_scripts/ruby/my_app/: .rbenv-gemsets  Gemfile  Rakefile
transaction_scripts/ruby/my_app/config/: database.yml
transaction_scripts/ruby/my_app/db/: schema.rb
transaction_scripts/ruby/my_app/db/migrate/: 20191206113532_create_product_table.rb  20191206120306_create_contract_table.rb  20191206125432_create_revenue_recognition_tabale.rb
transaction_scripts/ruby/my_app/lib/: gateway.rb
transaction_scripts/ruby/my_app/migrations/: 1_create_product_table.rb  2_create_contract_table.rb  3_create_revenue_recognition_table.rb
transaction_scripts/ruby/my_app/spec/: gateway_spec.rb  spec_helper.rb
transaction_scripts/rust/my_app/: .env  Cargo.toml  Makefile
transaction_scripts/rust/my_app/migrations/2019-11-23-112410_create_product/: up.sql
transaction_scripts/rust/my_app/migrations/2019-11-23-112935_create_contract/: up.sql
transaction_scripts/rust/my_app/migrations/2019-11-23-113106_create_revenue_recognition/: down.sql
transaction_scripts/rust/my_app/src/: gateway.rs  main.rs  recognition_service.rs  schema.rs
transaction_scripts/rust/my_app/src/service/: mod.rs  recognition_service.rs
