[package]
name = "my_app"
version = "0.1.0"
authors = ["gahan.rakholia <gahan.rakholia@go-jek.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.15.2", features = ["with-chrono"] }
chrono = "0.4.9"

[build-dependencies]
diesel = { version = "1.4.3", default-features = false, features = ["postgres"] }
dotenv = "0.15.0" 
